[gd_scene load_steps=7 format=3 uid="uid://cv8xc3nmobp3s"]

[ext_resource type="Script" path="res://scripts/mageProjectile.gd" id="1_05ase"]
[ext_resource type="Texture2D" uid="uid://c344emevrab58" path="res://assets/Flame.png" id="2_eas8e"]
[ext_resource type="Texture2D" uid="uid://dijvkpobpubwm" path="res://assets/Sushi.png" id="2_tbyp0"]
[ext_resource type="Texture2D" uid="uid://b7baobsjtlsnb" path="res://assets/light.png" id="4_3eqmh"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_acdwx"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CircleShape2D" id="CircleShape2D_tntv2"]
radius = 21.0238

[node name="MageProjectile" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_05ase")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_acdwx")
position = Vector2(-1, -19)
scale = Vector2(0.3, 0.3)
amount = 3
speed_scale = 4.6
explosiveness = 0.65
local_coords = true
texture = ExtResource("2_eas8e")
emission_shape = 1
emission_sphere_radius = 22.9
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
angular_velocity_min = 720.0
angular_velocity_max = 720.0
color = Color(0.309804, 0.0470588, 0.603922, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -19)
scale = Vector2(3, 3)
texture = ExtResource("2_tbyp0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 2
position = Vector2(-2, -19)
shape = SubResource("CircleShape2D_tntv2")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(-2, -19)
shape = SubResource("CircleShape2D_tntv2")

[node name="Life" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1, -18)
energy = 2.14
texture = ExtResource("4_3eqmh")
texture_scale = 0.1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Life" to="." method="_on_life_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
